--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "dev": "nodemon ./src/server.js"
   },
   "dependencies": {
+    "@fluidjs/multer-cloudinary": "^1.0.4",
+    "cloudinary": "^2.9.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "mongoose": "^9.1.4",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.11"
   }
 }
