--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "dev": "nodemon ./src/server.js"
   },
   "dependencies": {
-    "@fluidjs/multer-cloudinary": "^1.0.4",
-    "cloudinary": "^2.9.0",
+    "cloudinary": "^1.41.3",
     "dotenv": "^17.2.3",
     "express": "^4.19.2",
     "mongoose": "^9.1.4",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^3.1.11"
   }
 }
